fix stick navbar on ios device

--- a/src/app/components/payment-tab/payment-tab.component.scss
+++ b/src/app/components/payment-tab/payment-tab.component.scss
@@ -2,6 +2,8 @@
   background-color: var(--ion-color-step-0);
   height: 70px;
   position: sticky;
+  position: -webkit-sticky;
+  position: fixed;
   bottom: 0;
   z-index: 101;
   border-top: 1px solid var(--ion-color-step-50);
